--- a/day1/task3.html
+++ b/day1/task3.html
@@ -10,7 +10,7 @@
 
     <div style="height: 100vh;width: 100vw;display: flex;align-items: center;justify-content: center;">
 
-    <table style="border: col;">
+    <table >
         <tr style="height: 12.5%;"><td></td><td></td></tr>
         <tr ><td></td><td></td></tr>
         <tr ><td></td><td></td></tr>
