--- a/day2/task5.html
+++ b/day2/task5.html
@@ -12,7 +12,7 @@
         <input type="text"  id="username">
         <br><br>
         <label for="password">Password: </label>
-        <input type="text" id="password"> 
+        <input type="password" id="password"> 
         <br><br>
         <span >Gender: </span>
         <label for="male"> <input type="radio" value="Male" name="Gender" id="male"> Male </label>
