--- a/day2/task5.html
+++ b/day2/task5.html
@@ -36,7 +36,7 @@
         
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
-        import { getDatabase,set,ref,get,child   } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-database.js";
+        import { getDatabase,set,ref,get   } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-database.js";
         // TODO: Add SDKs for Firebase products that you want to use
         // https://firebase.google.com/docs/web/setup#available-libraries
         // Your web app's Firebase configuration
