--- a/day5-6/html/categoryShowing.html
+++ b/day5-6/html/categoryShowing.html
@@ -26,9 +26,7 @@
         "description": "A stylish silver watch with a leather strap. Perfect for dressing up or everyday wear."
         -->
 
-        <div class="category-container">
-         
-          </div>
+        <div class="category-container">  </div>
       
       </main>
       <footer id="footer"></footer>
