--- a/day5-6/html/nav.html
+++ b/day5-6/html/nav.html
@@ -18,8 +18,8 @@
                 </ul>
             </select>
             <div id="searchbar">
-                <input class="inputText" type="text" placeholder="searchbar">
-                <img src="../images/search.png" alt=""> 
+                <input class="inputText searchText" type="text" onchange="(e)=>this.value=e.target.value" placeholder="searchbar">
+                <img class="searchButton" src="../images/search.png" alt=""> 
             </div>
     </section>
 
