--- a/day5-6/html/nav.html
+++ b/day5-6/html/nav.html
@@ -24,6 +24,11 @@
     </section>
 
     <section id="navSection3">
+        <div id="wishList">
+            <a href="wishList.html">
+                <img src="../images/heart.png" alt="">
+            </a>
+        </div>
         <div id="cart">
             <a href="cart.html">
                 <img src="../images/add-to-cart.png" alt="">
@@ -31,7 +36,10 @@
         </div>
         <div id="account">
             <a href="profile.html">
-                <img src="../images/profile.png" alt="">
+                <div style="display: flex;align-items: center;">
+                    <img src="../images/profile.png" alt="">
+                    <span style="margin-left: 10px;">Account</span>
+                </div>
             </a>
         </div>
     </section>
