day5 final submit

--- a/day5-6/html/home.html
+++ b/day5-6/html/home.html
@@ -19,7 +19,7 @@
           
           <section id="heroBannerSection">
           </section>
-          
+          <button class="ShopNowButton"  onclick="window.location = 'http://127.0.0.1:5500/html/categoryShowing.html?category=All'"  >Shop Now</button>
         </div>
 
         <div class="category-container">
