--- a/day5-6/html/signUp.html
+++ b/day5-6/html/signUp.html
@@ -20,7 +20,7 @@
                 <h1 class="title"> Sign Up</h1>
 
                 <label for="name">Name : </label>
-                <input  name="name" id="name" type="text"  placeholder="enter Your Name">
+                <input  name="name" id="name" type="text" required minlength="4"  placeholder="enter FirstName and LastName">
                 
                 <label for="email">Email : </label>
                 <input name="email" id="email" type="email" required  placeholder="enter Your Email">
