--- a/day9/Task1.html
+++ b/day9/Task1.html
@@ -10,7 +10,7 @@
 
     <div class="main">
         <div id="FirstSection" >
-            <div  id="firstcircle0" class="firstcircle"></div>
+            <div  ondragstart="dragHandler(event)" draggable="true" id="firstcircle0" class="firstcircle"></div>
         </div>
         <div class="secondSection">
             <div  ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"  class="secondcircle"></div>
