--- a/day5-6/html/cart.html
+++ b/day5-6/html/cart.html
@@ -1,138 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="../css/cart.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script type="module" src="../js/main.js"></script>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <nav id="mainNav"></nav>
     <main id="main">
-        <main class="container">
-            <h1 class="heading">
-                <ion-icon name="cart-outline"></ion-icon> Shopping Cart
-            </h1>
+      <main class="container">
+        <h1 class="heading">
+          <ion-icon name="cart-outline"></ion-icon> Shopping Cart
+        </h1>
 
-            <div class="item-flex">
+        <div class="item-flex">
+          <section class="checkout">
+            <h2 class="section-heading">Payment Details</h2>
 
-                <section class="checkout">
-                    <h2 class="section-heading">Payment Details</h2>
+            <div class="payment-form">
+              <div class="payment-method">
+                <button
+                  value="Credit Card"
+                  id="CreditCard"
+                  class="method selected"
+                >
+                  <span>Credit Card</span>
+                </button>
+                <button value="PayPal" id="PayPal" class="method">
+                  <span>PayPal</span>
+                </button>
+              </div>
 
-                    <div class="payment-form">
-                        <div class="payment-method">
-                            <button value="Credit Card" id="CreditCard" class="method selected">
-                                <span>Credit Card</span>
-                            </button>
-                            <button value="PayPal" id="PayPal" class="method">
-                                <span>PayPal</span>
-                            </button>
-                        </div>
+              <form id="Form">
+                <div class="cardholder-name">
+                  <label for="cardholder-name" class="label-default"
+                    >Cardholder Name</label
+                  >
+                  <input
+                    required
+                    type="text"
+                    id="cardholder-name"
+                    class="input-default"
+                    name="cardholder-name"
+                  />
+                </div>
 
-                        <form id = 'Form'>
+                <div class="card-number">
+                  <label for="card-number" class="label-default"
+                    >Card Number</label
+                  >
+                  <input
+                    required
+                    type="number"
+                    id="card-number"
+                    class="input-default"
+                    name="card-number"
+                  />
+                </div>
 
-                            <div class="cardholder-name">
-                                <label for="cardholder-name" class="label-default">Cardholder Name</label>
-                                <input required type="text" id="cardholder-name" class="input-default" name="cardholder-name">
-                            </div>
+                <div class="userName">
+                  <label for="name" class="label-default">Name</label>
+                  <input
+                    required
+                    type="text"
+                    id="name"
+                    class="input-default"
+                    name="name"
+                  />
+                </div>
 
-                            <div class="card-number">
-                                <label for="card-number" class="label-default">Card Number</label>
-                                <input required type="number" id="card-number" class="input-default" name="card-number">
-                            </div>
+                <div class="userEmail">
+                  <label for="email" class="label-default">email</label>
+                  <input
+                    required
+                    type="email"
+                    id="email"
+                    class="input-default"
+                    name="email"
+                  />
+                </div>
 
-                            <div class="userName">
-                                <label for="name" class="label-default">Name</label>
-                                <input required type="text" id="name" class="input-default" name="name">
-                            </div>
+                <div class="userAddress">
+                  <label for="address" class="label-default">Address</label>
+                  <textarea
+                    required
+                    name="address"
+                    class="input-default"
+                    id="address"
+                  ></textarea>
+                </div>
 
-                            <div class="userEmail">
-                                <label for="email" class="label-default">email</label>
-                                <input required type="email" id="email" class="input-default" name="email">
-                            </div>
+                <div class="input-flex">
+                  <div class="expire-date">
+                    <label for="expire-date" class="label-default"
+                      >Expiration Date</label
+                    >
 
-                            <div class="userAddress">
-                                <label for="address" class="label-default">Address</label>
-                                <textarea required name="address" class="input-default" id="address"></textarea>
-                            </div>
-
-                            <div class="input-flex">
-                                <div class="expire-date">
-                                    <label for="expire-date" class="label-default">Expiration Date</label>
-
-                                    <div class="input-flex">
-                                        <input required type="number" name="day" id="expire-date" class="input-default" placeholder="31" min="1" max="31">
-                                        /
-                                        <input required type="number" name="month" id="expire-date" class="input-default" placeholder="12" min="1" max="12">
-                                    </div>
-                                </div>
-
-                                <div class="cvv" >
-                                    <label for="cvv" class="label-default">CVV</label>
-                                    <input required type="number" id="cvv" class="input-default" name="cvv">
-                                </div>
-                            </div>
-                            
-                                <div class="btn-wrapper" style="margin-top: 50px;">
-                                    <button type="submit" class="btn btn-primary"><b>Pay</b> $ <span id="payAmount">0.00</span></button>
-                                </div>
-                        </form>
+                    <div class="input-flex">
+                      <input
+                        required
+                        type="number"
+                        name="day"
+                        id="expire-date"
+                        class="input-default"
+                        placeholder="31"
+                        min="1"
+                        max="31"
+                      />
+                      /
+                      <input
+                        required
+                        type="number"
+                        name="month"
+                        id="expire-date"
+                        class="input-default"
+                        placeholder="12"
+                        min="1"
+                        max="12"
+                      />
                     </div>
+                  </div>
 
-                </section>
+                  <div class="cvv">
+                    <label for="cvv" class="label-default">CVV</label>
+                    <input
+                      required
+                      type="number"
+                      id="cvv"
+                      class="input-default"
+                      name="cvv"
+                    />
+                  </div>
+                </div>
 
-                <section class="cart">
-                    <div class="cart-item-box">
-                        <h2 class="section-heading">Order Summary
-
-                            <span> <button style="margin-left: 6px; font-size: 15px; padding: 2px; border:1px solid black; background:lightgrey;border-radius: 4px;"  onclick="window.location = `http://127.0.0.1:5500/html/categoryShowing.html?category=All`"  >Shop More</button></span>
-                        </h2>
-                        <div id="product-cards" >
-                            <span  style="display: block; padding: 40px 0px ; text-align: center;">Loading... </span>
-                        </div>
-
-
-
-
-
-                        <div class="wrapper">
-
-
-                            <div class="amount">
-                                <div class="subtotal">
-                                    <span>Subtotal</span> <span>$ <span id="subtotal">0.00 </span></span>
-                                </div>
-
-                                <div class="tax">
-                                    <span>Tax</span> <span>$ <span id="tax">0.10</span></span>
-                                </div>
-
-                                <div class="shipping">
-                                    <span>Shipping</span> <span>$ <span id="shipping">0.00</span></span>
-                                </div>
-
-                                <div class="total">
-                                    <span>Total</span> <span>$ <span id="total">0.00</span></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                <div class="btn-wrapper" style="margin-top: 50px;">
+                  <button type="submit" class="btn btn-primary">
+                    <b>Pay</b> $ <span id="payAmount">0.00</span>
+                  </button>
+                </div>
+              </form>
             </div>
-        </main>
+          </section>
+
+          <section class="cart">
+            <div class="cart-item-box">
+              <h2 class="section-heading">
+                Order Summary
+
+                <span>
+                  <button
+                    style="
+                      margin-left: 6px;
+                      font-size: 15px;
+                      padding: 2px;
+                      border: 1px solid black;
+                      background: lightgrey;
+                      border-radius: 4px;
+                    "
+                    onclick="window.location = `categoryShowing.html?category=All`"
+                  >
+                    Shop More
+                  </button></span
+                >
+              </h2>
+              <div id="product-cards">
+                <span
+                  style="display: block; padding: 40px 0px; text-align: center;"
+                  >Loading...
+                </span>
+              </div>
+
+              <div class="wrapper">
+                <div class="amount">
+                  <div class="subtotal">
+                    <span>Subtotal</span>
+                    <span>$ <span id="subtotal">0.00 </span></span>
+                  </div>
+
+                  <div class="tax">
+                    <span>Tax</span> <span>$ <span id="tax">0.10</span></span>
+                  </div>
+
+                  <div class="shipping">
+                    <span>Shipping</span>
+                    <span>$ <span id="shipping">0.00</span></span>
+                  </div>
+
+                  <div class="total">
+                    <span>Total</span>
+                    <span>$ <span id="total">0.00</span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
     </main>
 
     <footer id="footer"></footer>
 
     <script type="module" src="../js/cart.js"></script>
-
-
-</body>
-
+  </body>
 </html>
